deleted develop folder, added comments to HTML/CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body> 
-
+    
+    <!-- NAVIGATION BAR -->
     <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -26,8 +27,10 @@
         </div>
     </nav>
 
+    <!-- MAIN SCREEN IMAGE -->
     <section class="hero"></section>
 
+    <!-- LEFT SIDE SECTION OF CONTENT -->
     <section class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="notebook on a table" class="float-left" />
@@ -52,6 +55,7 @@
         </div>
     </section>
 
+    <!-- RIGHT SIDE SECTION OF CONTENT -->
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -76,6 +80,7 @@
         </div>
     </aside>
 
+    <!-- FOOTER -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
